[package]
name = "jimu-framework"
version = "0.1.1"
authors = ["yanfeng.li <86966524@qq.com>"]
edition = "2018"
keywords = ["http", "framework"]
categories = ["web-programming::http-server"]
repository = "https://github.com/yanfenglee/jimu-framework"
documentation = "https://docs.rs/jimu-framework"
description = "Build software block like Lego in rust"
readme = "README.md"
license = "MIT"


[dependencies]
